--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.59MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
-  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.33MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇳 中国-884.4KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.52MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-16.04MB/s(Youtube:不良林), server: v2hk-ws-tls.ytv2line.top, port: 48203, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2hk-ws-tls.ytv2line.top}}
+  - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-503.2KB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇭🇰 香港-396.6KB/s(Youtube:不良林), server: 626sg.ok365.cyou, port: 443, type: trojan, password: f5ff683a-c1f1-4b58-a80b-b83199d86d2b, sni: 626sg.ok365.cyou, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.05MB/s(Youtube:不良林), server: hk01.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: hk01.henet.cyou}}
   - {name: 🇨🇳 中国-9.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-4.50MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-503.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇭🇰 香港-396.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
