--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-160.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-216.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-478.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-8.76MB/s(Youtube:不良林), server: tw02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw02.henet.cyou}}
-  - {name: 🇬🇧 英国-3.50MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇯🇵 日本-10.97MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.44MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.51MB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-12.24MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.11MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇳 中国-934.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.13MB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.08MB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-368.8KB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: inap007.xmrth-node.xyz, port: 15567, type: vmess, uuid: 53ad95b1-8693-34e3-98d7-2010ad24aaf9, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: inap007.xmrth-node.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-160.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-216.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-478.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.44MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-160.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-216.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-478.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.44MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-160.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-216.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-478.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.44MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.24MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-160.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-216.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-478.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.44MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-160.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-216.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-478.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.44MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-160.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-216.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-478.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.44MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-160.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-216.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-478.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.44MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
